--- a/robotiq_85_msgs/package.xml
+++ b/robotiq_85_msgs/package.xml
@@ -11,6 +11,8 @@
     <!-- Packages needed to build and run-->
     <build_depend>roslaunch</build_depend>
     <build_depend>message_generation</build_depend>
+    <build_depend>actionlib_msgs</build_depend>
+    <run_depend>actionlib_msgs</run_depend>
     <run_depend>message_runtime</run_depend>  
     <build_depend>std_msgs</build_depend>
     <run_depend>std_msgs</run_depend>
